--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -28,7 +28,7 @@
 
 			<div class="form">
 				
-				 <form  method="POST" action="/upMessage">
+				 <form  method="POST" action="http://localhost:8081/upMessage">
 				<div class="form-item">
 					<label class="required">手机号码</label>
 					<div class="right-box">
