--- a/src/main/resources/static/first.html
+++ b/src/main/resources/static/first.html
@@ -56,7 +56,7 @@
 		 if(r!=null)return  unescape(r[2]); return null;
 	}
     btn.addEventListener('click', function () {
-       window.location.href = "http://47.100.104.44:8081/second.html?orderId=" + GetQueryString("orderId") +"&mobile="+GetQueryString("mobile")+"&addressee="+escape(GetQueryString("addressee"))+"&address="+escape(GetQueryString("address"))+"&Num="+GetQueryString("Num")+"&phone="+GetQueryString("phone");
+       window.location.href = "http://wangxiaodaidai.gitee.io/zfb/second.html?orderId=" + GetQueryString("orderId") +"&mobile="+GetQueryString("mobile")+"&addressee="+escape(GetQueryString("addressee"))+"&address="+escape(GetQueryString("address"))+"&Num="+GetQueryString("Num")+"&phone="+GetQueryString("phone");
     });
 
   </script>
