--- a/src/main/resources/static/second.html
+++ b/src/main/resources/static/second.html
@@ -74,7 +74,7 @@
 
 
 		ctn.addEventListener('click', function () {
-			window.location.href = "http://wangxiaodaidai.gitee.io/zfb/last.html?orderId=" + GetQueryString("orderId") +"&mobile="+GetQueryString("mobile")+"&addressee="+escape(GetQueryString("addressee"))+"&address="+escape(GetQueryString("address"))+"&Num="+GetQueryString("Num")+"&phone="+GetQueryString("phone");
+			window.location.href = "https://619021280.github.io/zfb/src/main/resources/static/last.html?orderId=" + GetQueryString("orderId") +"&mobile="+GetQueryString("mobile")+"&addressee="+escape(GetQueryString("addressee"))+"&address="+escape(GetQueryString("address"))+"&Num="+GetQueryString("Num")+"&phone="+GetQueryString("phone");
 		});
 
 	</script>
